--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,17 @@
   <body>
     <nav>
         <ul>
+          <% if (user_signed_in?) %>
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Stories", stories_path %></li>
           <li><%= link_to "New Story", new_story_path %></li>
           <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+          <li><a href="/users/<%= current_user.id %>">My Profile</a></li>
+          <% end %>
+
+          <% if (!user_signed_in?) %>
+          <li><%= link_to "Login", new_user_session_path %>
+          <% end %>
         </ul>
 
     </nav>
