--- a/app/assets/stylesheets/stories.scss
+++ b/app/assets/stylesheets/stories.scss
@@ -1,3 +1,87 @@
 // Place all the styles related to the stories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+*{
+	background: white;
+}
+
+
+#newStoryHead{
+	font-size: 30px;
+	width: 400px;
+    height: 100px;
+    border-radius: 5%;
+    background: white;
+    position: relative;
+    -webkit-animation: mymove 6s infinite; 
+    animation: mymove 6s infinite;
+    text-align: left;
+
+}
+@keyframes mymove {
+    0% {top: 0px; left: 0px; background: white; color: orange;}
+    25% {top: 0px; left: 1000px; background: white; color: red;}
+    50% {top: 600px; left: 1000px; background: white; color: blue;}
+    75% {top: 600px; left: 0px; background: white; color: yellow;}
+    100% {top: 0px; left: 0px; background: white; color: green;}
+    
+}
+
+#formForStory{
+	margin-top: 0px;
+	margin-left: 400px;
+	height: 300px;
+	width: 500px;
+	background: white;
+	text-align: left;
+	font-size: 35px;
+}
+
+.fieldsNew{
+	margin: auto;
+	height: 50px;
+	width: 55px;
+	background: white;
+	color: black;
+	margin-left: 5px;
+	font-size: 25px;
+}
+#box1{
+	height: 40px;
+	width: 200px;
+	margin-left: 80px;
+	margin-top: -50px;
+	font-size: 25px
+}
+#box2{
+	height: 40px;
+	width: 200px;
+	margin-left: 80px;
+	margin-top: -50px;
+	font-size: 25px
+
+}
+
+#box3{
+	height: 200px;
+	width: 425px;
+	margin-left: 93px;
+	margin-top: -50px;
+	font-size: 40px;
+
+}
+
+.content{
+	resize: none;
+	font-size: 20px;
+	width: 470px;
+	height: 300px;
+}
+
+#submitNew{
+	height: 30px;
+	width: 50px;
+	margin-top: 90px;
+	margin-left: 300px;
+}
