--- a/app/assets/stylesheets/stories.scss
+++ b/app/assets/stylesheets/stories.scss
@@ -3,16 +3,14 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 *{
-	background: white;
+	background: orange;
 }
 
 
 #newStoryHead{
 	font-size: 30px;
 	width: 400px;
-    height: 100px;
-    border-radius: 5%;
-    background: white;
+    height: 0px;
     position: relative;
     -webkit-animation: mymove 6s infinite; 
     animation: mymove 6s infinite;
@@ -20,7 +18,7 @@
 
 }
 @keyframes mymove {
-    0% {top: 0px; left: 0px; background: white; color: orange;}
+    0% {top: 0px; left: 0px; background: white; color: black;}
     25% {top: 0px; left: 1000px; background: white; color: red;}
     50% {top: 600px; left: 1000px; background: white; color: blue;}
     75% {top: 600px; left: 0px; background: white; color: yellow;}
@@ -29,59 +27,61 @@
 }
 
 #formForStory{
-	margin-top: 0px;
+	margin-top: 100px;
 	margin-left: 400px;
 	height: 300px;
 	width: 500px;
-	background: white;
+	background: orange;
 	text-align: left;
 	font-size: 35px;
 }
 
 .fieldsNew{
+	padding: 0px;
 	margin: auto;
 	height: 50px;
 	width: 55px;
-	background: white;
+	background: orange;
 	color: black;
 	margin-left: 5px;
 	font-size: 25px;
-}
-#box1{
-	height: 40px;
-	width: 200px;
-	margin-left: 80px;
-	margin-top: -50px;
-	font-size: 25px
-}
-#box2{
-	height: 40px;
-	width: 200px;
-	margin-left: 80px;
-	margin-top: -50px;
-	font-size: 25px
 
 }
 
-#box3{
-	height: 200px;
-	width: 425px;
-	margin-left: 93px;
-	margin-top: -50px;
-	font-size: 40px;
 
+.title{
+	// padding: 0px;
+	background: white;
+	margin-left: 115px;
+	margin-top: -300px;
+	// border:2px solid red;
+	position:relative;
+	top: -32px;
 }
+
+.genre{
+	background: white;
+	margin-left: 115px;
+	margin-top: -50px;
+	// border:2px solid red;
+	position:relative;
+	top: -60px;
+}
+
 
 .content{
 	resize: none;
 	font-size: 20px;
 	width: 470px;
-	height: 300px;
+	height: 275px;
+	background: white;
+	margin-left: 115px;
+	margin-top: -50px;
 }
 
 #submitNew{
 	height: 30px;
 	width: 50px;
-	margin-top: 90px;
+	margin-top: -9px;
 	margin-left: 300px;
 }
