--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,16 @@
   </head>
 
   <body>
-    <nav>
+
+<title></title>
+</head>
+<body>
+  
+<div id="bubbleletters">
+  <div id="letters"><h1><span>S</span><span>t</span><span>o</span><span>r</span><span>y</span><span> </span><span>B</span><span>u</span><span>i</span><span>l</span><span>d</span><span>e</span><span>r</span><span>!</span></h1></div>
+    
+</div>
+      <nav>
         <ul>
           <% if (user_signed_in?) %>
           <li><%= link_to "Home", root_path %></li>
