--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -71,8 +71,24 @@ h1 span:nth-child(14){ animation-delay:.65s; }
 
 #letters{
 	height: 200px;
-  width: 670px;
+    width: 670px;
 	margin: auto;
 	margin-left:
 	background: yellow;
+}
+
+#navbar{
+	height:50px; 
+	width:100%;
+	display: inline-block;
+	border: 1px solid black;
+	font-size: 30px;
+
+
+}
+
+.linktabs{
+	display:inline-block;
+	margin-left: 135px;
+	font-family: 'signika';
 }
