--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,22 +18,24 @@
   <div id="letters"><h1><span>S</span><span>t</span><span>o</span><span>r</span><span>y</span><span> </span><span>B</span><span>u</span><span>i</span><span>l</span><span>d</span><span>e</span><span>r</span><span>!</span></h1></div>
     
 </div>
+      <div id="navbar">
       <nav>
-        <ul>
+        
           <% if (user_signed_in?) %>
-          <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "Stories", stories_path %></li>
-          <li><%= link_to "New Story", new_story_path %></li>
-          <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
-          <li><a href="/users/<%= current_user.id %>">My Profile</a></li>
+          <div class="linktabs"><%= link_to "Home", root_path %></div>
+          <div class="linktabs"><%= link_to "Stories", stories_path %></div>
+          <div class="linktabs"><%= link_to "New Story", new_story_path %></div>
+          <div class="linktabs"><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></div>
+          <div class="linktabs"><a href="/users/<%= current_user.id %>">My Profile</a></div>
           <% end %>
 
           <% if (!user_signed_in?) %>
-          <li><%= link_to "Login", new_user_session_path %>
+          <div class="linktabs"><%= link_to "Login", new_user_session_path %></div>
           <% end %>
-        </ul>
+        
 
     </nav>
+  </div>
 
 
 
