--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,12 +41,14 @@ h1 span { display:inline-block; animation:float .2s ease-in-out infinite; }
   33%{ transform:translateY(-1px) rotate(-2deg); }
   66%{ transform:translateY(1px) rotate(2deg); }
 }
-body:hover span { animation:bounce .6s; }
+body:infinite span { animation:bounce 100s; }
 
 @keyframes bounce {
-  0%,100%{ transform:translate(0); }
+  0% { transform:translate(0); }
+  5% { transform: rotateX(20deg) translateY(4px) rotate(6deg); }
   25%{ transform:rotateX(20deg) translateY(2px) rotate(-3deg); }
   50%{ transform:translateY(-20px) rotate(7deg) scale(1.1);  }
+  100%{ transform:translate(0); }
 }
 
 span:nth-child(4n-1) { color:hsl(0, 100%, 55%); text-shadow:1px 1px hsl(1, 75%, 45%), 2px 2px hsl(50, 45%, 45%), 3px 3px hsl(50, 45%, 45%), 4px 4px hsl(70, 75%, 45%); }
