--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,75 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#welcome_greet{
+	height: 80px;
+	width: 100%;
+	font-size: 50px;
+	text-align: center;
+	margin-top: 20px;
+	-webkit-animation: mymove 25s infinite; 
+    animation: mymove 25s infinite;
+}
+
+#stp{
+	height: 80px;
+	width: 100%;
+	font-size: 30px;
+	text-align: center;
+	margin-top: 20px;
+	-webkit-animation: twomove 2s infinite; 
+    animation: twomove 2s infinite;
+	
+}
+@keyframes mymove {
+     0% {top: 0px; left: 0px; color: green;}
+    25% {top: 0px; left: 0px; color: red;}
+    50% {top: 0px; left: 0px; color: blue;}
+    75% {top: 0px; left: 0px; color: yellow;}
+    100% {top: 0px; left: 0px; color: purple;}
+}
+#wel2{
+	height: 80px;
+	width: 100%;
+	font-size: 30px;
+	text-align: center;
+	margin-top: 20px;
+	// -webkit-animation: twomove 2s infinite; 
+ //    animation: twomove 2s infinite;
+}
+#wel3{
+	height: 80px;
+	width: 100%;
+	font-size: 30px;
+	text-align: center;
+	margin-top: 20px;
+	// -webkit-animation: twomove 2s infinite; 
+ //    animation: twomove 2s infinite;
+}
+@keyframes twomove {
+     0% {top: 0px; left: 0px;}
+    25% {top: 0px; left: 10px;}
+    50% {top: 0px; left: 0px;}
+    75% {top: 0px; left: 10px;}
+    100% {top: 0px; left: 0px;}
+}
+#wel4{
+	height: 80px;
+	width: 100%;
+	font-size: 30px;
+	text-align: center;
+	margin-top: 20px;
+
+}
+#wel5{
+	height: 80px;
+	width: 100%;
+	font-size: 30px;
+	text-align: center;
+	margin-top: 20px;
+}
+
+
+
+
