--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -69,7 +69,74 @@
 	text-align: center;
 	margin-top: 20px;
 }
+#profHead{
+	height: 80px;
+	width: 500px;
+	font-size: 50px;
+	text-align: left;
+	margin-top: -10px;
+	margin-bottom: 10px;
+	margin-left: 465px;
+	-webkit-animation: mymove 25s infinite; 
+    animation: mymove 25s infinite;
+}
+#profname{
+	height: 80px;
+	width: 100%;
+	font-size: 30px;
+	margin-top: 20px;
 
+}
+
+#profuser{
+	height: 80px;
+	width: 100%;
+	font-size: 30px;
+	margin-top: 20px;
+
+
+}
+
+#profemail{
+	height: 80px;
+	width: 100%;
+	font-size: 30px;
+	margin-top: 20px;
+
+}
+
+#profcont{
+	height: 300px;
+	width: 600px;
+	font-size: 30px;
+	margin-left: 470px;
+	text-align: left;
+}
+
+#pcont{
+	height: 300px;
+	width: 500px;
+	margin-left: 950px;
+	margin-top: -350px;
+	font-size: 30px;
+	text-align: center;
+}
+
+#cont2{
+	height: 100px;
+	width: 200px;
+	text-align: left;
+	margin-left: 170px;
+}
+
+#proflinks{
+	height: 150px;
+	width: 400px;
+	margin-top: 75px;
+	margin-left: 505px;
+	text-align: center;
+	font-size: 30px;
+}
 
 
 
