--- a/app/assets/stylesheets/stories.scss
+++ b/app/assets/stylesheets/stories.scss
@@ -85,3 +85,23 @@
 	margin-top: -9px;
 	margin-left: 300px;
 }
+
+#storylist{
+	text-align: center;
+	font-size: 100px
+}
+
+
+
+
+#titleList{
+	text-align: center;
+}
+
+#storyGenre{
+	text-align: center;
+}
+
+#storyType{
+	text-align: center;
+}
