--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,6 +1,6 @@
-<h1>List Of Stories</h1>
+<div id="storylist"><h1>List Of Stories</h1></div>
 
 <% @stories.each do |s| %>
-	<a href="/stories/<%= s.id %>"><div>Title: <%= s.title %><br></div></a>
-	<div>Genre: <%= s.genre %></div>
+	<a href="/stories/<%= s.id %>"><div id="titleList">Title:</div> <div id="storyName"><%= s.title %></div></a><br>
+	<div id="storyGenre">Genre: </div><div id="storyName<%= s.genre %></div>
 <% end %>
