--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -60,7 +60,6 @@
 	font-size: 30px;
 	text-align: center;
 	margin-top: 20px;
-
 }
 #wel5{
 	height: 80px;
@@ -103,6 +102,7 @@
 	font-size: 30px;
 	margin-top: 20px;
 
+
 }
 
 #profcont{
@@ -114,29 +114,33 @@
 }
 
 #pcont{
-	height: 300px;
-	width: 500px;
-	margin-left: 950px;
-	margin-top: -350px;
+	height: 600px;
+	width: 300px;
+	margin-left: 570px;
+	margin-top: 0px;
 	font-size: 30px;
 	text-align: center;
+	display: inline-block;
 }
 
-#cont2{
+.cont2{
 	height: 100px;
-	width: 200px;
+	width: 300px;
 	text-align: left;
-	margin-left: 170px;
+	margin-left: 0px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 #proflinks{
 	height: 150px;
 	width: 400px;
-	margin-top: 75px;
-	margin-left: 505px;
+	margin-top: 0px;
+	margin-left: 520px;
 	text-align: center;
 	font-size: 30px;
 }
+
 
 
 
