--- a/app/assets/stylesheets/stories.scss
+++ b/app/assets/stylesheets/stories.scss
@@ -108,7 +108,7 @@
 	margin-top: -20px;
 }
 #showContent{
-	font-size: 20px;
+	font-size: 30px;
 	width: 100%;
 	height: 275px;
 	background: orange;
@@ -125,4 +125,38 @@
 
 #storyType{
 	text-align: center;
+}
+
+#authCont{
+	height: 100px;
+	width: 400px;
+	margin-left: 500px;
+	display: inline-block;
+}
+.authors{
+	display: inline-block;
+	font-size: 25px;
+}
+#showAdd{
+	height: 60px;
+	width: 400px;
+	margin: auto;
+	text-align: center;
+	font-size: 35px;
+}
+
+.adding{
+	height: 200px;
+	width: 400px;
+	margin: auto;
+}
+
+.addText{
+	font-size: 20px;
+	width: 420px;
+	height: 275px;
+	background: white;
+	margin: auto;
+	margin-top: 10px;
+
 }
