--- a/app/assets/stylesheets/stories.scss
+++ b/app/assets/stylesheets/stories.scss
@@ -28,13 +28,14 @@
 	text-align: left;
 }
 
-#storyresults{
-	height: 400px;
-	width: 30%;
-	margin: auto;
-	font-size: 25px;
-	margin-bottom: 15px;
-}
+// #storyresults{
+// 	height: 1200px;
+// 	width: 30%;
+// 	margin: auto;
+// 	font-size: 25px;
+// 	margin-bottom: 15px;
+// 	border: 1px solid black;
+
 
 #titleList{
 	height: 50px;
@@ -190,6 +191,7 @@
 
 #animation{
 	height: 330px;
+	margin-top: 20px;
 	width: 100%;
 	// border: 1px solid black;
 	background-color: black;
@@ -200,4 +202,11 @@
 	from { background-position: 0px; }
 	to { background-position: -960px; }
 
+}
+#contentStory{
+	height: 100px;
+	width: 350px;
+	margin-bottom: 15px;
+	margin: auto;
+	font-size: 25px;
 }
