--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,12 +1,14 @@
 <div id="storylist"><h1>List Of Stories</h1></div>
 
-<div id="storyresults">
+<!-- <div id="storyresults"> -->
 <% @stories.each do |s| %>
+    <div id='contentStory'>
 	
         <div id='titleList'>Title: <a href="/stories/<%= s.id %>"> <%= s.title %></a><br></div>
 	   
 	    <div id="storyGenre">Genre: <%= s.genre %></div>
+	</div>
 <% end %>
-</div>
+<!-- </div> -->
 
 <div id='animation'></div>
