--- a/app/assets/stylesheets/stories.scss
+++ b/app/assets/stylesheets/stories.scss
@@ -28,13 +28,14 @@
 	text-align: left;
 }
 
-#storyresults{
-	height: 400px;
-	width: 30%;
-	margin: auto;
-	font-size: 25px;
-	margin-bottom: 15px;
-}
+// #storyresults{
+// 	height: 1200px;
+// 	width: 30%;
+// 	margin: auto;
+// 	font-size: 25px;
+// 	margin-bottom: 15px;
+// 	border: 1px solid black;
+
 
 #titleList{
 	height: 50px;
@@ -136,13 +137,13 @@
 }
 #showContent{
 	font-size: 30px;
-	width: 80%;
+	width: 100%;
 	height: 275px;
 	background: orange;
 	color: black;
-	margin-left: 110px;
-	margin-top: 10px;
-	overflow: scroll;
+	margin-left: 10px;
+	margin-top: px;
+	overflow: none;
 }
 
 #storyGenre{
@@ -166,7 +167,7 @@
 }
 #showAdd{
 	height: 60px;
-	width: 600px;
+	width: 400px;
 	margin: auto;
 	text-align: center;
 	font-size: 35px;
@@ -190,14 +191,22 @@
 
 #animation{
 	height: 330px;
+	margin-top: 20px;
 	width: 100%;
 	// border: 1px solid black;
 	background-color: black;
-	background:url(../assets/megaman.png);
+	background:url(../assets/fight.jpg);
 	animation: walk-east 2.0s steps(8) infinite;
 }
 @keyframes walk-east {
 	from { background-position: 0px; }
 	to { background-position: -960px; }
 
+}
+#contentStory{
+	height: 100px;
+	width: 350px;
+	margin-bottom: 15px;
+	margin: auto;
+	font-size: 25px;
 }
