--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -77,7 +77,7 @@ body{
 }
 #profHead{
 	height: 80px;
-	width: 500px;
+	width: 800px;
 	font-size: 50px;
 	text-align: left;
 	margin-top: 30px;
@@ -101,6 +101,13 @@ body{
 	margin-top: 20px;
 
 
+}
+
+#proftitle{
+	width: 400px;
+}
+#profgenre{
+	width: 400px;
 }
 
 #profemail{
