--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -10,5 +10,11 @@
 	</div>
 <% end %>
 <!-- </div> -->
+<div id='animation'>
+	<div class="pic" id='pic1'></div>
+	<div class="pic" id='pic2'></div>
+	<div class="pic" id='pic3'></div>
+	<div class="pic" id='pic4'></div>
+	
 
-<div id='animation'></div>
+</div>
