change font to sans serif for signForm

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -121,6 +121,7 @@ border-radius: 25px;
   text-align: left;
   margin: auto;
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 
  }
  #signForm{
