--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -101,6 +101,7 @@ border-radius: 25px;
   margin: auto;
   margin-top: 0px;
   font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
  }
 
  #login{
@@ -131,6 +132,7 @@ border-radius: 25px;
   margin: auto;
   margin-top: 0px;
   font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
 }
- }
+
 
